# pyproject

./: Dockerfile  compose.yaml  devcontainer.json  pyproject.toml  requirements.txt
src/backend/core/: config.py  constants.py  path_config.py
src/backend/data/: test.ipynb
src/backend/data/nba/: constants.py
src/backend/data/nba/processed/Data/nba/: NBA_Index.json  NBA_Team_Info.csv  NBA_Team_Rosters.csv  PlayerNameIDMap.csv  notes.MD
src/backend/data/nba/processed/Data/nba/stats/: nba_data.py
src/backend/data/nba/processed/Data/nba/stats/years/2015/: NBA_League_Dash_Player_Stats_.csv
src/backend/data/nba/processed/Data/nba/stats/years/2016/: NBA_League_Dash_Player_Stats.csv
src/backend/data/nba/raw/nba/: player_index.csv  team_roster.csv
src/backend/database/: db.py
src/backend/models/: base.py
src/backend/models/NBA/: models.py  nba_models.py
src/backend/utils/: logger.py
